# hm-asm

./: .gitignore  Cargo.toml  README.md  state.html  t
examples/: add_endless.asm  add_number.asm  comments.asm  labels.asm  list_of_ops.asm
hm-asm-cli/: Cargo.toml  README.md
hm-asm-cli/src/: html.rs  main.rs
hm-asm-simulator/: Cargo.toml  README.md
hm-asm-simulator/src/: asm.pest  generate.rs  lib.rs  simulate.rs
hm-asm-web/: Cargo.toml  README.md  hm-asm.js
hm-asm-web/demo/: index.js  package-lock.json  package.json
hm-asm-web/src/: lib.rs
src/: asm.pest  asm.rs  generate.rs  html.rs  main.rs  parse.rs  simulate.rs
