[package]
name = "hm-asm-cli"
version = "0.1.0"
authors = ["Henrik Böving <hargonix@gmail.com>"]
edition = "2018"
description = "A CLI frontend for hm-asm-simulator"
readme = "README.md"
repository = "https://github.com/hargonix/hm-asm"
license-file = "../LICENSE"
keywords = ["asm", "cli", "hm-asm", "simulator", "assembler"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hm-asm-simulator = { path = "../hm-asm-simulator", version = "0.1.0" }
pest = "2.0"
