[package]
name = "hm-asm-simulator"
version = "0.1.0"
authors = ["Henrik Boeving <boeving@hm.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.0"
pest_derive = "2.0"
serde = { version = "1.0", features = ["derive"] }