[package]
name = "hm-asm-simulator"
version = "0.1.0"
authors = ["Henrik Boeving <hargonix@gmail.com>"]
edition = "2018"
description = "The simulation and compilation logic for hm-asm"
readme = "README.md"
repository = "https://github.com/hargonix/hm-asm"
license-file = "../LICENSE"
keywords = ["asm", "hm-asm", "simulator", "assembler"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.0"
pest_derive = "2.0"
serde = { version = "1.0", features = ["derive"] }
