[package]
name = "hm-asm-web"
version = "0.1.0"
authors = ["Henrik Böving <hargonix@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
hm-asm-simulator = { path = "../hm-asm-simulator", version = "0.1.0" }
pest = "2.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
